# OpenCL-TTL

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL  README.md  TTL.h  TTL_core.h  TTL_create_type.h  TTL_create_types.h  TTL_debug.h  TTL_import_export.h  TTL_macros.h  TTL_pipeline_schemes.h  TTL_tensors.h  TTL_tiles.h  TTL_trace_macros.h  TTL_types.h  license.txt
.github/actions/build_doxygen/: action.yml  entrypoint.sh
.github/workflows/: build-and-deploy-docs.yml  build-and-deploy-doxygen.yml  check-c-sample.yml  check-cpp-opencl-sample.yml  check-cpp-samples.yml  check-install-preprocessed.yml  check-install.yml  check-python-opencl-samples.yml  check_hooks.yml
.reuse/: dep5
TTL_cpp/: TTL.h  TTL_core.h  TTL_debug.h  TTL_import_export.h  TTL_macros.h  TTL_pipeline_schemes.h  TTL_tensors.h  TTL_tiles.h  TTL_types.h
TTL_cpp/c/: TTL_import_export.h  TTL_types.h
TTL_cpp/opencl/: TTL_async_work_group_copy_3D3D.h  TTL_import_export.h  TTL_types.h
TTL_cpp/pipelines/: TTL_double_scheme.h  TTL_double_scheme_template.h  TTL_duplex_scheme.h  TTL_schemes_common.h  TTL_simplex_scheme.h
c/: TTL_import_export.h  TTL_types.h
c/samples/: README.md  TTL_double_buffering.c  TTL_duplex_buffering.c  TTL_sample_runner.py  TTL_simplex_buffering.c  compute_cross.h  kernel.h  main.c  preformat.c
cpp/samples/: README.md  TTL_double_buffering.cpp  TTL_duplex_buffering.cpp  TTL_duplex_simple_buffering.cpp  TTL_sample_runner.py  TTL_simplex_buffering.cpp  TTL_simplex_buffering_fixed.cpp  compute_cross.h  fixed_tensor_sizes.h  kernel.h  main.cpp
doc/tutorials/introduction_to_ttl/: introduction_to_ttl.md
doc/tutorials/pipelining_dma_tiled_loops/: pipelining_dma_tiled_loops.md
docs/: conf.py  index.rst  installation.rst  requirements.txt  run-samples.rst
docs/introduction/: background.rst  import-export-transactions.rst  index.rst  logical-tiling.rst  physical-tensors.rst
gh-pages/: index.html
html/: CODE__OF__CONDUCT_8md.html  README_8md.html  TTL_8h.html  TTL_8h.js  TTL_8h__dep__incl.map  TTL_8h__dep__incl.md5  TTL_8h__incl.map  TTL_8h__incl.md5  TTL_8h_source.html  TTL__async__work__group__copy__3D3D_8h.html  TTL__async__work__group__copy__3D3D_8h.js  TTL__async__work__group__copy__3D3D_8h_source.html  TTL__core_8h.html  TTL__core_8h__dep__incl.map  TTL__core_8h__dep__incl.md5  TTL__core_8h__incl.map  TTL__core_8h__incl.md5  TTL__core_8h_source.html  TTL__create__type_8h.html  TTL__create__type_8h__dep__incl.map  TTL__create__type_8h__dep__incl.md5  TTL__create__type_8h__incl.map  TTL__create__type_8h__incl.md5  TTL__create__type_8h_source.html  TTL__create__types_8h.html  TTL__create__types_8h.js  TTL__create__types_8h__dep__incl.map  TTL__create__types_8h__dep__incl.md5  TTL__create__types_8h__incl.map  TTL__create__types_8h__incl.md5  TTL__create__types_8h_source.html  TTL__debug_8h.html  TTL__debug_8h__dep__incl.map  TTL__debug_8h__dep__incl.md5  TTL__debug_8h__incl.map  TTL__debug_8h__incl.md5  TTL__debug_8h_source.html  TTL__double__scheme_8h.html  TTL__double__scheme_8h.js  TTL__double__scheme_8h__incl.map  (+864 more)
html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  (+19 more)
import_export/: TTL_typed_import_export.h
opencl/: TTL_async_work_group_copy_3D3D.h  TTL_import_export.h  TTL_types.h
opencl/samples/: README.md  TTL_double_buffering.cl  TTL_duplex_buffering.cl  TTL_sample_runner.py  TTL_simplex_buffering.cl
opencl/samples/cpp/: README.md  TTL_sample_overlap.cl  TTL_sample_runner.cpp  TTL_sample_simple.cl  check_copy.h  check_cross.h  check_square.h  compute_copy.h  compute_cross.h  compute_square.h  test_all_types.sh
opencl/samples/python/: README.md  TTL_double_buffering.cl  TTL_duplex_buffering.cl  TTL_sample_runner.py  TTL_simplex_buffering.cl  compute_cross.h
opencl/test/: CMakeLists.txt  README.md  main.cpp  procs.h  test_ttl.cpp
pipelines/: TTL_double_scheme.h  TTL_double_scheme_template.h  TTL_duplex_scheme.h  TTL_schemes_common.h  TTL_simplex_scheme.h
scripts/: doxyfile.in  generate_doxygen.sh  git_check.sh  install_git_hooks.sh  preprocess.c  preprocess.sh  preprocess_ttl.h  split_doxgen.py
scripts/git-hooks/: clang-format  copyright-check  pre-commit
tensors/: TTL_ext_tensors.h  TTL_int_ext_typed_tensors.h  TTL_int_tensors.h  TTL_tensor_rw.h  TTL_tensors_common.h
xml/: CODE__OF__CONDUCT_8md.xml  Doxyfile.xml  README_8md.xml  TTL_8h.xml  TTL__async__work__group__copy__3D3D_8h.xml  TTL__core_8h.xml  TTL__create__type_8h.xml  TTL__create__types_8h.xml  TTL__debug_8h.xml  TTL__double__scheme_8h.xml  TTL__double__scheme__template_8h.xml  TTL__duplex__scheme_8h.xml  TTL__ext__tensors_8h.xml  TTL__import__export_8h.xml  TTL__int__ext__typed__tensors_8h.xml  TTL__int__tensors_8h.xml  TTL__macros_8h.xml  TTL__pipeline__schemes_8h.xml  TTL__schemes__common_8h.xml  TTL__simplex__scheme_8h.xml  TTL__tensor__rw_8h.xml  TTL__tensors_8h.xml  TTL__tensors__common_8h.xml  TTL__tiles_8h.xml  TTL__trace__macros_8h.xml  TTL__typed__import__export_8h.xml  TTL__types_8h.xml  TTL_double_buffering_8cl-example.xml  TTL_duplex_buffering_8cl-example.xml  TTL_simplex_buffering_8cl-example.xml  c_2TTL__import__export_8h.xml  c_2TTL__types_8h.xml  dir_0802e3012b25a36ad182b43f92b17f4b.xml  dir_0b0810c7d05bca711abb073c531255dd.xml  dir_13be83ee55fa4ec491d00a3974976af8.xml  dir_1784a01aa976a8c78ef5dfc3737bcac8.xml  dir_1f3f5074656d946f31d672e5e6980211.xml  dir_27a0528e06a0f64f2a8c4c68dfb19422.xml  dir_3c69c44e2a3422d47d59ead424f1f0d0.xml  dir_3f765fbc6e5549e64e5b04db522cb1c3.xml  (+167 more)
